// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DispositionsForm /> renders create form 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    data-automation="nameInput"
    disabled={false}
    inputType="text"
    label="Name *"
    name="name"
    placeholder="Please enter a name..."
  />
  <InputField
    componentType="input"
    data-automation="externalIdInput"
    disabled={false}
    label="External ID"
    name="externalId"
  />
  <InputField
    componentType="textarea"
    data-automation="descriptionInput"
    disabled={false}
    inputType="text"
    label="Description"
    name="description"
  />
  <ConfirmationWrapper
    mainText="Setting shared to 'enabled' for this Disposition. Once a Disposition is enabled and saved, it cannot be reverted."
    secondaryText="Are you sure you want to continue?"
  >
    <ToggleField
      data-automation="sharedToggle"
      disabled={true}
      label="Shared"
      name="shared"
      title="Change \\"Shared\\" state for this Disposition"
    />
  </ConfirmationWrapper>
</form>
`;

exports[`<DispositionsForm /> renders update form 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    data-automation="nameInput"
    disabled={false}
    inputType="text"
    label="Name *"
    name="name"
    placeholder="Please enter a name..."
  />
  <InputField
    componentType="input"
    data-automation="externalIdInput"
    disabled={false}
    label="External ID"
    name="externalId"
  />
  <InputField
    componentType="textarea"
    data-automation="descriptionInput"
    disabled={false}
    inputType="text"
    label="Description"
    name="description"
  />
  <ConfirmationWrapper
    confirmBtnCallback={[Function]}
    mainText="Setting shared to 'enabled' for this Disposition. Once a Disposition is enabled and saved, it cannot be reverted."
    secondaryText="Are you sure you want to continue?"
  >
    <ToggleField
      data-automation="sharedToggle"
      disabled={false}
      label="Shared"
      name="shared"
      title="Change \\"Shared\\" state for this Disposition"
    />
  </ConfirmationWrapper>
</form>
`;
